@@ -2,6 +2,7 @@
 
 - Replace custom jmx agent with jdk's
 - Defunct jmx.rmiserver.hostname property
+- Add additional Logger methods for literal messages
 
 * 0.78
 
